src/objects/DD_Staging_Table_Accessory__c.object
<CustomObject>
    <description>***Demo Depot application*** 
This is the staging table for Tesseract(This object will be used for integration between tesseract andSFDC) 
(For Accessory)</description>
    <fields>
        <fullName>Call_Num__c</fullName>
        <label>Call_Num</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSRL_Bad_Qty__c</fullName>
        <label>FSRL_Bad_Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSRL_Call_Num__c</fullName>
        <label>FSRL_Call_Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSRL_FSR_Num__c</fullName>
        <label>FSRL_FSR_Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSRL_ID_Num__c</fullName>
        <label>FSRL_ID_Num</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSRL_Last_Update__c</fullName>
        <label>FSRL_Last_Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSRL_Part_Desc__c</fullName>
        <label>FSRL_Part_Desc</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSRL_Part_Num__c</fullName>
        <label>FSRL_Part_Num</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSRL_Qty__c</fullName>
        <label>FSRL_Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSRL_Ret_Bad__c</fullName>
        <label>FSRL_Ret_Bad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSRL_Ret_ID__c</fullName>
        <label>FSRL_Ret_ID</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSRL_Ret_Part_Num__c</fullName>
        <label>FSRL_Ret_Part_Num</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSRL_Ret_Qty__c</fullName>
        <label>FSRL_Ret_Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSRL_Stock_Site_Num__c</fullName>
        <label>FSRL_Stock_Site_Num</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSR_Area_Code__c</fullName>
        <label>FSR_Area_Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSR_Call_Num__c</fullName>
        <label>FSR_Call_Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSR_Complete_Date__c</fullName>
        <label>FSR_Complete_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSR_Last_Update__c</fullName>
        <label>FSR_Last_Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSR_Num__c</fullName>
        <label>FSR_Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSR_Part_Num__c</fullName>
        <label>FSR_Part_Num</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSR_Prod_Num__c</fullName>
        <label>FSR_Prod_Num</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSR_Ref_Num__c</fullName>
        <label>FSR_Ref_Num</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSR_Ser_Num__c</fullName>
        <label>FSR_Ser_Num</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSR_Solution__c</fullName>
        <label>FSR_Solution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSR_Start_Date__c</fullName>
        <label>FSR_Start_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job_Preapproval_Part_Num__c</fullName>
        <label>Job Preapproval Part Num</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_modified_date_Custom__c</fullName>
        <formula>DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last modified date(Custom)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Part_Description__c</fullName>
        <label>Part Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Total quantity</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Processed_By_Batch_Class__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the identifier to identify that records has been processed.</description>
        <label>Record Processed By Batch Class</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Return_Quantity__c</fullName>
        <label>Return Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Staging Table Accessory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FSR_Solution__c</columns>
        <columns>FSRL_Qty__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Count</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Table Accessorys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>